--- a/index.html
+++ b/index.html
@@ -39,6 +39,30 @@
     <button onclick="filterBySkills()">Filter</button>
   </div>
 
+  <div class="search-bar">
+    <label>Filter by Skills:</label><br>
+    <input type="checkbox" id="pythonCheckbox" value="Python">
+    <label for="pythonCheckbox">Python</label><br>
+    <input type="checkbox" id="sqlCheckbox" value="SQL">
+    <label for="sqlCheckbox">SQL</label><br>
+    <input type="checkbox" id="jsCheckbox" value="JavaScript">
+    <label for="jsCheckbox">JavaScript</label><br>
+    <input type="checkbox" id="htmlCheckbox" value="HTML">
+    <label for="htmlCheckbox">HTML</label><br>
+    <input type="checkbox" id="cssCheckbox" value="CSS">
+    <label for="cssCheckbox">CSS</label><br>
+    <input type="checkbox" id="photoshopCheckbox" value="Photoshop">
+    <label for="photoshopCheckbox">Photoshop</label><br>
+    <input type="checkbox" id="manualTestingCheckbox" value="Manual Testing">
+    <label for="manualTestingCheckbox">Manual Testing</label><br>
+    <input type="checkbox" id="javaCheckbox" value="Java">
+    <label for="javaCheckbox">Java</label><br>
+    <!-- Add more checkbox inputs for additional skills -->
+    <button onclick="filterByMaxSkills()">Filter</button>
+  </div>
+  
+  
+
   <div id="employeeList"></div>
 
   <script>
@@ -109,6 +133,55 @@ function searchByName() {
       );
       renderEmployees(filteredEmployees);
     }
+
+    // Filter employees by multiple skills
+function filterByMaxSkills() {
+  const pythonCheckbox = document.getElementById('pythonCheckbox');
+  const sqlCheckbox = document.getElementById('sqlCheckbox');
+  const jsCheckbox = document.getElementById('jsCheckbox');
+  const htmlCheckbox = document.getElementById('htmlCheckbox');
+  const cssCheckbox = document.getElementById('cssCheckbox');
+  const photoshopCheckbox = document.getElementById('photoshopCheckbox');
+  const manualTestingCheckbox = document.getElementById('manualTestingCheckbox');
+  const javaCheckbox = document.getElementById('javaCheckbox');
+  // Add references to additional checkbox inputs for other skills
+
+  const selectedSkills = [];
+  if (pythonCheckbox.checked) {
+    selectedSkills.push('Python');
+  }
+  if (sqlCheckbox.checked) {
+    selectedSkills.push('SQL');
+  }
+  if (jsCheckbox.checked) {
+    selectedSkills.push('JavaScript');
+  }
+  if (htmlCheckbox.checked) {
+    selectedSkills.push('HTML');
+  }
+  if (cssCheckbox.checked) {
+    selectedSkills.push('CSS');
+  }
+  if (photoshopCheckbox.checked) {
+    selectedSkills.push('Photoshop');
+  }
+  if (manualTestingCheckbox.checked) {
+    selectedSkills.push('Manual Testing');
+  }
+  if (javaCheckbox.checked) {
+    selectedSkills.push('Java');
+  }
+  // Add similar checks for additional skills checkboxes
+
+  const filteredEmployees = employees.filter(employee => {
+    return selectedSkills.every(skill => employee.skills.includes(skill));
+  });
+
+  renderEmployees(filteredEmployees);
+}
+
+
+
   </script>
 </body>
 </html>
