--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
       padding: 10px;
       margin-bottom: 10px;
     }
+    .mul{
+      width: 30%;
+    }
   </style>
 </head>
 <body>
@@ -50,7 +53,7 @@
      </span>
      <div class="search-bar">
       <label for="skillDropdown">Filter by Skills:</label>
-      <select id="skillDropdown" multiple onchange="filterBySkills()">
+      <select id="skillDropdown" multiple onchange="filterBySkills()" class="mul">
         <option value="">All</option>
         <option value="SQL">SQL</option>
         <option value="Photoshop">Photoshop</option>
