--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <select id="skillDropdown" multiple onchange="filterBySkills()" class="mul">
         <option value="">All</option>
         <option value="SQL">SQL</option>
-        <option value="Photoshop">Photoshop</option>
+        <option value="Python">Python</option>
         <option value="JavaScript">JavaScript</option>
         <option value="HTML">HTML</option>
         <option value="CSS">CSS</option>
